--- a/docs/public/config.yaml
+++ b/docs/public/config.yaml
@@ -47,25 +47,29 @@ retention:
 
 ingest:
   processor:
-    workers: 48                 # Double concurrency (more cores for higher throughput)
-    max_batch_msgs: 10000       # Larger batch for better throughput
-    flush_ms: 1                 # Flush even faster for lower latency
+    workers: 2                  # Match 2-core CPU
+    max_batch_msgs: 512         # Smaller batch to fit in lower RAM footprint
+    flush_ms: 5                 # Relaxed flush for lower resource use
   queue:
-    capacity: 1048576           # 1M queue: much larger, handles big spikes/bursts
-    batch_size: 131072          # Larger batch size for higher throughput
-    drain_poll_interval: 250us  # Faster polling for lower latency
-    max_pooled_buffer_bytes: 3GB # 3GB buffer (assuming lots of RAM for speed)
-    recover: true
-    truncate_interval: 60s      # Less frequent SSD writes, but not a bottleneck
-    wal:
-      enabled: false             # WAL for durability
+    mode: durable               # Keep on-disk durability
+    # Shared base settings
+    capacity: 8192              # Smaller queue to fit 1GB RAM
+    batch_size: 128             # Less in-memory per batch
+    drain_poll_interval: 2ms    # Slightly slower polling reduces CPU
+    max_pooled_buffer_bytes: 64MB # Limit pooled buffer for lower RAM
+    memory:
+      recover: false
+      truncate_interval: 0s
+    durable:
+      recover: true
+      truncate_interval: 120s   # More infrequent WAL truncation (less SSD stress)
       mode: batch
-      max_file_size: 2GB         # 2GB WAL (less rotation, more headroom)
+      max_file_size: 256MB      # WAL max size fits 1GB disk
       enable_batch: true
-      batch_size: 4096           # Much larger WAL batch for best speed
-      batch_interval: 10ms       # WAL flush very frequently for speed
+      batch_size: 32            # Keep batches tiny for minimal RAM and fast flush
+      batch_interval: 50ms      # WAL flush every 50ms
       enable_compress: true
-      compress_min_bytes: 512    # Only compress payloads 512B+, conserves CPU
+      compress_min_bytes: 1024  # Compress only payloads 1KB+
       retention_bytes: 0
       retention_age: 0
 
