--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -43,14 +43,15 @@ ingest:
     shutdown_poll_interval: 5ms
     memory:
       flush_batch_size: 10_000
-      flush_interval_ms: 50
+      flush_interval_ms: 2
     durable:
       recover_on_startup: true
-      flush_batch_size: 1
-      flush_interval_ms: 30
+      flush_batch_size: 10_000
+      flush_interval_ms: 2
       size_per_wal_file: 256MB
-      min_compress_size: 1024
+      min_compress_size: 5120
       write_buffer_size: 1gb
+      disable_pebble_wal: true
 
 telemetry:
   sample_rate: 0.001
