--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -38,7 +38,7 @@ ingest:
     worker_count: 16
     apply_queue_buffer_size: 10_000
   queue:
-    mode: durable
+    mode: memory
     buffer_capacity: 1_000_000
     shutdown_poll_interval: 5ms
     memory:
