--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -35,18 +35,18 @@ retention:
 
 ingest:
   intake:
-    queue_capacity: 1
+    queue_capacity: 1_000_000
     shutdown_poll_interval: 5ms
     wal:
       enabled: false
       segment_size: 20MB
   compute:
     worker_count: 16
-    buffer_capacity: 1000
+    buffer_capacity: 100_000
   apply:
-    batch_count: 1_000
-    batch_timeout_ms: 1000
-    fsync_after_batch: true
+     batch_count: 1_000
+     apply_batch_timeout: 1s
+     fsync_after_batch: true
 
 telemetry:
   sample_rate: 0.001
