--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -3,18 +3,15 @@ server:
   port: 8080
   db_path: "./database"
   max_payload_size: "200KB"
-  tls:
-    cert_file: ""
-    key_file: ""
   cors:
     allowed_origins:
       - "http://localhost:3000"
       - "http://127.0.0.1:3000"
   rate_limit:
     rps: 100_000
-    burst: 200_000
-  # ip_whitelist:
-  #   - "127.0.0.1"
+    burst: 150_000
+  ip_whitelist:
+    - "127.0.0.1"
   api_keys:
     backend: ["sk_example"]
     frontend: ["pk_example"]
