--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -24,12 +24,12 @@ logging:
 retention:
   enabled: true
   cron: "0 2 28-31 * *"  # Run at 2am on possible end-of-month days
-  mttl: 30d  # Messages deleted after 30 days - since their delete
-  tttl: 30d  # Threads deleted after 30 days - since their delete
+  mttl: 720h  # Messages deleted after 720 hours (30 days) - since their delete
+  tttl: 720h  # Threads deleted after 720 hours (30 days) - since their delete
 
 ingest:
   intake:
-    queue_capacity: 200_000
+    queue_capacity: 10
     shutdown_poll_interval: 5ms
     wal:
       enabled: true
@@ -41,7 +41,7 @@ ingest:
     buffer_capacity: 100_000
   apply:
      batch_count: 1_000
-     batch_timeout: 1ms
+     batch_timeout: 2ms
      fsync_after_batch: true
 
 telemetry:
