--- a/docs/public/config.yaml
+++ b/docs/public/config.yaml
@@ -74,6 +74,6 @@ encryption:
     mode: "embedded"
     endpoint: "127.0.0.1:6820"
     data_dir: "./kms-data"
-    binary: "/usr/local/bin/progressdb-kms"
+    binary: "/usr/local/bin/prgkms"
     master_key_file: ""
     master_key_hex: ""
