fix - prep for deploy

--- a/.github/workflows/release-db-service.yml
+++ b/.github/workflows/release-db-service.yml
@@ -51,7 +51,7 @@ jobs:
         uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
-          args: release --clean
+          args: release --clean --skip=validate
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
