refac - prep  for release

--- a/.github/workflows/release-db-service.yml
+++ b/.github/workflows/release-db-service.yml
@@ -51,8 +51,9 @@ jobs:
         uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
-          args: release --clean --skip=validate
+          args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+https://github.com/shirou/gopsutil#gopsutil-psutil-for-golang
