--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,7 +17,7 @@ builds:
     env:
       - CGO_ENABLED=0
     ldflags:
-      - -s -w -X main.version={{ .Version }} -X main.commit={{ .Commit }} -X main.buildDate={{ .Date }}
+      - -s -w -X main.version={{ trimprefix .Tag "service-" }} -X main.commit={{ .Commit }} -X main.buildDate={{ .Date }}
   - id: prgkms
     dir: ./kms
     main: ./cmd/prgkms
@@ -31,7 +31,7 @@ builds:
     env:
       - CGO_ENABLED=0
     ldflags:
-      - -s -w -X main.version={{ .Version }} -X main.commit={{ .Commit }} -X main.buildDate={{ .Date }}
+      - -s -w -X main.version={{ trimprefix .Tag "service-" }} -X main.commit={{ .Commit }} -X main.buildDate={{ .Date }}
 
   # single server build includes both embedded and external KMS implementations
 
@@ -57,9 +57,9 @@ release:
     name: progressdb              # 👈 repo name
   draft: false
   prerelease: auto
-  # Custom tag handling to strip service- prefix
+  name_template: "{{ .ProjectName }} {{ trimprefix .Tag "service-" }}"
   header: |
-    ## ProgressDB {{.Version}}
+    ## ProgressDB {{ trimprefix .Tag "service-" }}
   footer: |
     Docker Images:
     - docker.io/progressdb/progressdb:{{.Tag}}
@@ -88,7 +88,7 @@ dockers:
   - id: dockerhub_amd64
     image_templates:
       - "docker.io/progressdb/progressdb:{{ .Tag }}-amd64"
-      - "docker.io/progressdb/progressdb:{{ .Version }}-amd64"
+      - "docker.io/progressdb/progressdb:{{ trimprefix .Tag "service-" }}-amd64"
     dockerfile: goreleaser.Dockerfile
     use: buildx
     build_flag_templates:
@@ -100,7 +100,7 @@ dockers:
   - id: dockerhub_kmsd_amd64
     image_templates:
       - "docker.io/progressdb/prgkms:{{ .Tag }}-amd64"
-      - "docker.io/progressdb/prgkms:{{ .Version }}-amd64"
+      - "docker.io/progressdb/prgkms:{{ trimprefix .Tag "service-" }}-amd64"
     dockerfile: goreleaser.Dockerfile
     use: buildx
     build_flag_templates:
@@ -112,7 +112,7 @@ dockers:
   - id: dockerhub_arm64
     image_templates:
       - "docker.io/progressdb/progressdb:{{ .Tag }}-arm64"
-      - "docker.io/progressdb/progressdb:{{ .Version }}-arm64"
+      - "docker.io/progressdb/progressdb:{{ trimprefix .Tag "service-" }}-arm64"
     dockerfile: goreleaser.Dockerfile
     use: buildx
     build_flag_templates:
@@ -124,7 +124,7 @@ dockers:
   - id: dockerhub_kmsd_arm64
     image_templates:
       - "docker.io/progressdb/prgkms:{{ .Tag }}-arm64"
-      - "docker.io/progressdb/prgkms:{{ .Version }}-arm64"
+      - "docker.io/progressdb/prgkms:{{ trimprefix .Tag "service-" }}-arm64"
     dockerfile: goreleaser.Dockerfile
     use: buildx
     build_flag_templates:
@@ -136,7 +136,7 @@ dockers:
   - id: ghcr_amd64
     image_templates:
       - "ghcr.io/ProgressDB/progressdb:{{ .Tag }}-amd64"
-      - "ghcr.io/ProgressDB/progressdb:{{ .Version }}-amd64"
+      - "ghcr.io/ProgressDB/progressdb:{{ trimprefix .Tag "service-" }}-amd64"
     dockerfile: goreleaser.Dockerfile
     use: buildx
     build_flag_templates:
@@ -148,7 +148,7 @@ dockers:
   - id: ghcr_kmsd_amd64
     image_templates:
       - "ghcr.io/ProgressDB/prgkms:{{ .Tag }}-amd64"
-      - "ghcr.io/ProgressDB/prgkms:{{ .Version }}-amd64"
+      - "ghcr.io/ProgressDB/prgkms:{{ trimprefix .Tag "service-" }}-amd64"
     dockerfile: goreleaser.Dockerfile
     use: buildx
     build_flag_templates:
@@ -160,7 +160,7 @@ dockers:
   - id: ghcr_arm64
     image_templates:
       - "ghcr.io/ProgressDB/progressdb:{{ .Tag }}-arm64"
-      - "ghcr.io/ProgressDB/progressdb:{{ .Version }}-arm64"
+      - "ghcr.io/ProgressDB/progressdb:{{ trimprefix .Tag "service-" }}-arm64"
     dockerfile: goreleaser.Dockerfile
     use: buildx
     build_flag_templates:
@@ -172,7 +172,7 @@ dockers:
   - id: ghcr_kmsd_arm64
     image_templates:
       - "ghcr.io/ProgressDB/prgkms:{{ .Tag }}-arm64"
-      - "ghcr.io/ProgressDB/prgkms:{{ .Version }}-arm64"
+      - "ghcr.io/ProgressDB/prgkms:{{ trimprefix .Tag "service-" }}-arm64"
     dockerfile: goreleaser.Dockerfile
     use: buildx
     build_flag_templates:
