refac - worker multiplier easy setup

--- a/.github/workflows/release-db-service.yml
+++ b/.github/workflows/release-db-service.yml
@@ -47,13 +47,16 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Extract version from tag
+        run: echo "VERSION=${GITHUB_REF#refs/tags/service-}" >> $GITHUB_ENV
+
       - name: Run goreleaser
         uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
-          args: release --clean
+          args: release --clean --skip=validate
         env:
+          GORELEASER_CURRENT_TAG: ${{ env.VERSION }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-https://github.com/shirou/gopsutil#gopsutil-psutil-for-golang
